<resources>
    <string name="app_name">US DMV Driving Test</string>
    <string name="topic">Topic</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dmv_written_test">DMV WRITTEN TEST</string>
    <string name="title_activity_test_topic">TestTopicActivity</string>
    <string name="title_activity_test_topic_study_all_in_one_page_">TestTopic_StudyAllInOnePage_Activity</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_exam_simulator">EXAM SIMULATOR</string>
    <string name="title_activity_main">US DRIVING</string>
    <string name="title_activity_video_tips">DRIVING TIPS</string>
    <string name="banner_ad_unit_id">ca-app-pub-1669381788971337/1485297808</string>

    <string name="title_dmv_written_test">DMV Written test</string>
    <string name="title_test_topic">Test topic</string>
    <string name="title_exam_simulator">Exam simulator</string>
    <string name="title_learning_card">Learning card</string>
    <string name="title_driver_manual">Driver manual</string>
    <string name="title_video_tips">Video tips</string>
    <string name="title_change_state">Change State</string>
    <string name="next" >Next</string>
    <string name="previous" >Previous</string>
    <string name="title_activity_drivers_manual">DriversManualActivity</string>
    <string name="sliding_menu_title">US DRIVING</string>
    <string name="sliding_menu_state">Current State: California</string>

    <string name="written_test_result_title">My test result summary</string>
    <string name="written_test_correct_answer">Correct</string>
    <string name="written_test_wrong_answer">Wrong</string>
    <string name="written_test_not_answered">Not answered</string>
    <string name="written_test_total_answer">{0}/30</string>
    <string name="written_test_question_no">Q{0}</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="choice_a">A. {0}</string>
    <string name="choice_b">B. {0}</string>
    <string name="choice_c">C. {0}</string>
    <string name="choice_d">D. {0}</string>

    <string name="exam_simulator_rule">This DMV Written Test Simulation Practice Engine consist of: \n30 multiple-choice driving theory questions.\n\nTo pass the test, you must get at least:\n21 correct answers out of the total 30 DMV Questions</string>
    <string name="exam_simulator_not_show_again">Do not show this rule again</string>
    <string name="exam_simulator_dialog_text_1">\tFinish answering all the questions?\nYou will be shown with the final result.\n\t\t\t\tProceed to end this test?</string>
    <string name="exam_simulator_dialog_text_2">If you see the answers, you will not able to redo the test. Want to continue?</string>
    <string name="exam_simulator_dialog_text_3">You are canceling this test. Want to continue?</string>


    //Driver's Manual
    <string name="text_hint_search_state">Search your state here</string>

    //Test Topic
    <string name="text_study_one">   Practice one by one</string>
    <string name="text_study_all">Study all in one page</string>

    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="pass_exam">YOU PASS!</string>
    <string name="fail_exam">YOU FAIL!</string>
    <string name="is_shown_again">Show Rule Again</string>
    <string name="wrong_answer">You are wrong!</string>
    <string name="correct_answer">You are right!</string>

    <string name="dmv_driving_test_tips">DMV Driving Test Tips</string>
    <string name="ten_tips">10 Tips For New Drivers</string>
    <string name="confession">Matthew Cordle confession (drunk driving, I killed a man)</string>
    <string name="ten_reasons_for_failing_driving_test">Top 10 Reasons for Failing the Driving Test</string>
    <string name="rules_of_the_road">Rules of the Road</string>
    <string name="california_driver_license_info">California Driver License Information</string>

    <string name="feedback">Feedback?</string>
    <string name="rate">Rate us</string>
    <string name="remove_ads">Remove Ads</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="test_card_question">Question: </string>
    <string name="test_card_answer">Answer: </string>
    <string name="title_dialog"> Detail</string>
    <string name="number_of_question">Number of question: </string>
    <string name="Result">Result</string>


    <string name="test_topic_1">Alcohol and Other Drugs</string>
    <string name="test_topic_2">Defensive Driving</string>
    <string name="test_topic_3">Driving Record Information</string>
    <string name="test_topic_4">Intersections and Turns</string>
    <string name="test_topic_5">Parallel Parking</string>
    <string name="test_topic_6">Passing</string>
    <string name="test_topic_7">Road Signs</string>
    <string name="test_topic_8">Sharing the Road</string>
    <string name="test_topic_9">Special Driving Conditions</string>
    <string name="test_topic_10">State Related Driving Knowledge</string>
    <string name="test_topic_11">Traffic Control</string>

     <string name="position_1">Position 1</string>
    <string name="position_2">Position 2</string>
    <string name="position_3">Position 3</string>
    <string name="position_4">Position 4</string>
    <string name="position_5">Position 5</string>
    <string name="position_6">Position 6</string>
    <string name="position_7">Position 7</string>
    <string name="position_8">Position 8</string>
    <string name="position_9">Position 9</string>
    <string name="position_10">Position 10</string>
    <string name="position_11">Position 11</string>


    <string name="test_card_position_22">Position 22</string>
    <string name="test_card_position_23">Position 23</string>
    <string name="test_card_position_24">Position 24</string>
    <string name="test_card_position_25">Position 25</string>
    <string name="test_card_position_26">Position 26</string>
    <string name="test_card_position_27">Position 27</string>
    <string name="test_card_position_28">Position 28</string>
    <string name="test_card_position_29">Position 29</string>
    <string name="test_card_position_30">Position 30</string>
    <string name="test_card_position_31">Position 31</string>
    <string name="test_card_position_32">Position 32</string>
    <string name="test_card_position_33">Position 33</string>
    <string name="test_card_position_34">Position 34</string>
    <string name="test_card_position_35">Position 35</string>
    <string name="test_card_position_36">Position 36</string>
    <string name="test_card_position_37">Position 37</string>
    <string name="test_card_position_38">Position 38</string>
    <string name="test_card_position_39">Position 39</string>
    <string name="test_card_position_40">Position 40</string>
    <string name="test_card_position_41">Position 41</string>
    <string name="test_card_position_42">Position 42</string>

    <string name="more_app">More Apps</string>
</resources>
