<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/layout_written_dialog"
            android:layout_width="@dimen/dialog_width"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_15"
                android:layout_marginRight="@dimen/margin_15"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvQuestionBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_5"
                    android:layout_marginTop="@dimen/margin_5"
                    android:text="@string/test_card_question"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_6"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_5"
                    android:layout_marginTop="@dimen/margin_5"
                    android:gravity="center_horizontal"
                    android:text="Question"
                    android:textColor="@color/black"
                    android:textSize="@dimen/common_text_size_20" />

                <ImageView
                    android:id="@+id/imgQuestion"
                    android:layout_width="@dimen/size_7"
                    android:layout_height="@dimen/size_7"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvAnswerBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5"
                    android:text="@string/test_card_answer"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_6"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvChoiceA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/common_size_5"
                    android:layout_marginTop="@dimen/margin_5"
                    android:text="@string/choice_a"
                    android:textColor="@color/black"
                    android:textSize="@dimen/common_text_size_16" />

                <TextView
                    android:id="@+id/tvChoiceB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/common_size_5"
                    android:layout_marginTop="@dimen/margin_5"
                    android:text="@string/choice_b"
                    android:textColor="@color/black"
                    android:textSize="@dimen/common_text_size_16" />

                <TextView
                    android:id="@+id/tvChoiceC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/common_size_5"
                    android:layout_marginTop="@dimen/margin_5"
                    android:text="@string/choice_c"
                    android:textColor="@color/black"
                    android:textSize="@dimen/common_text_size_16" />

                <TextView
                    android:id="@+id/tvChoiceD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/common_size_5"
                    android:layout_marginTop="@dimen/margin_5"
                    android:text="@string/choice_d"
                    android:textColor="@color/black"
                    android:textSize="@dimen/common_text_size_16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginBottom="@dimen/common_size_4"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5"
                    android:text="Your answer: "
                    android:textColor="@color/black"
                    android:textSize="@dimen/common_text_size_16"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvAnswer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5"
                    android:text="Alo"
                    android:textColor="@color/black"
                    android:textSize="@dimen/common_text_size_16"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvExplanation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_20"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                android:text="Explanation: "
                android:textColor="@color/black"
                android:textSize="@dimen/common_text_size_15"
                android:textStyle="italic" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>