<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="@dimen/dialog_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:text="@string/exam_simulator_dialog_text_1"
            android:textSize="@dimen/text_size_4" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/stroke_line_size"
            android:background="@color/circle_stroke_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/btnCancel"
                android:layout_width="@dimen/dialog_button_width"
                android:layout_height="@dimen/size_5"
                android:background="@color/white"
                android:clickable="true">

                <include layout="@layout/background_highlight" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/exam_simulator_stroke_line"
                    android:textSize="@dimen/text_size_6" />

            </RelativeLayout>

            <View
                android:layout_width="@dimen/stroke_line_size"
                android:layout_height="40dp"
                android:background="@color/circle_stroke_line" />

            <RelativeLayout
                android:id="@+id/btnOk"
                android:layout_width="@dimen/dialog_button_width"
                android:layout_height="@dimen/size_5"
                android:background="@color/white"
                android:clickable="true">

                <include layout="@layout/background_highlight" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/ok"
                    android:textAllCaps="false"
                    android:textColor="@color/exam_simulator_stroke_line"
                    android:textSize="@dimen/text_size_6" />

            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/stroke_line_size"
            android:background="@color/circle_stroke_line" />

    </LinearLayout>

</LinearLayout>