<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background"
    android:orientation="vertical"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_3"
        android:background="@color/written_test_color_2"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/written_test_result_title"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_7"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/chartContainer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_size_300"
        android:orientation="horizontal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/stroke_line_size"
        android:background="@color/written_test_color_2" />

    <RelativeLayout
        android:id="@+id/btnCorrectAnswer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_size_35">

        <include layout="@layout/background_highlight" />

        <ImageView
            android:id="@+id/imgCorrectAnswer"
            android:layout_width="@dimen/size_6"
            android:layout_height="@dimen/size_3"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_25"
            android:background="@drawable/ic_correct_answer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_15"
            android:layout_toRightOf="@+id/imgCorrectAnswer"
            android:text="@string/written_test_correct_answer"
            android:textSize="@dimen/text_size_7"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/tvCorrectAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_30"
            android:text="@string/written_test_total_answer"
            android:textSize="@dimen/text_size_7"
            android:textColor="@color/black"
            />

        <ImageView
            android:layout_width="@dimen/common_size_25"
            android:layout_height="@dimen/common_size_50"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_5"
            android:background="@drawable/ic_right" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/stroke_line_size"
        android:background="@color/written_test_color_2" />

    <RelativeLayout
        android:id="@+id/btnWrongAnswer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_size_35">

        <include layout="@layout/background_highlight" />

        <ImageView
            android:id="@+id/imgWrongAnswer"
            android:layout_width="@dimen/size_6"
            android:layout_height="@dimen/size_3"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_25"
            android:background="@drawable/ic_wrong_answer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_15"
            android:layout_toRightOf="@+id/imgWrongAnswer"
            android:text="@string/written_test_wrong_answer"
            android:textSize="@dimen/text_size_7"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/tvWrongAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_30"
            android:text="@string/written_test_total_answer"
            android:textSize="@dimen/text_size_7"
            android:textColor="@color/black"
            />

        <ImageView
            android:layout_width="@dimen/common_size_25"
            android:layout_height="@dimen/common_size_50"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_5"
            android:background="@drawable/ic_right" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/stroke_line_size"
        android:background="@color/written_test_color_2" />

    <RelativeLayout
        android:id="@+id/btnNotAnswered"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_size_35">

        <include layout="@layout/background_highlight" />

        <ImageView
            android:id="@+id/imgNotAnswered"
            android:layout_width="@dimen/size_6"
            android:layout_height="@dimen/size_3"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_25"
            android:background="@drawable/ic_not_answered" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_15"
            android:layout_toRightOf="@+id/imgNotAnswered"
            android:text="@string/written_test_not_answered"
            android:textSize="@dimen/text_size_7"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/tvNotAnswered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_30"
            android:text="@string/written_test_total_answer"
            android:textSize="@dimen/text_size_7"
            android:textColor="@color/black"
            />

        <ImageView
            android:layout_width="@dimen/common_size_25"
            android:layout_height="@dimen/common_size_50"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_5"
            android:background="@drawable/ic_right" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/stroke_line_size"
        android:background="@color/written_test_color_2" />
</LinearLayout>
